comparar sem icone

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -207,9 +207,9 @@
 							</li>
 							<li class="compare">
 								<a href="javascript:;" class="btn bgc c1" (click)="compareBtn($event);">
-									<span class="icon">
+<!-- 									<span class="icon">
 										<img [attr.src]="vars.icons.base + vars.icons.compLight" alt="">
-									</span>
+									</span> -->
 									<span class="text">Comparar</span>
 								</a>
 							</li>
@@ -288,8 +288,9 @@
 									</div>
 									<div class="compBtn">
 										<a href="javascript:;" (click)="compareAdd($event, item.hotelId)">
-											<span>
-												<img [attr.src]="vars.icons.base + vars.icons.compDark" alt="">
+											<span class="fgc c1">
+												Comparar
+												<!-- <img [attr.src]="vars.icons.base + vars.icons.compDark" alt=""> -->
 											</span>
 										</a>
 									</div>
