--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1179,9 +1179,15 @@ body {
 					}
 				}
 			}
-			& .compBtn span {
-				width: 2.5rem;
-				display: block;
+			& .compBtn {
+				&>a {
+					margin-top: 1rem;
+					display: inline-block;
+					text-decoration: none;
+					span {
+						font-weight: 600;
+					}
+				}
 			}
 		}
 		.filtro {
