--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -103,6 +103,11 @@ body {
 						position: relative;
 						width: 50%;
 					}
+					.eanKeys {
+						display: block;
+						clear: both;
+						padding-top: 2rem;
+					}
 					.submit {
 						position: relative;
 						padding-left: .7rem;
