--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -103,7 +103,7 @@ body {
 						position: relative;
 						width: 50%;
 					}
-					.eanKeys {
+					&.eanKeys {
 						display: block;
 						clear: both;
 						padding-top: 2rem;
