--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -129,7 +129,6 @@
 			font-weight: normal;
 			font-style: normal;
 		}
-
 		</style>
 		<style></style>
 		<div class="wrap">
@@ -157,6 +156,13 @@
 								<span>OK</span>
 							</a>
 						</div>
+						<div class="hotelprice">
+							<div class="wrap">
+								<span>Preço por noite</span>
+								<em>Min <span [textContent]="vars.filter.hotelprice.val[0] | currency:'BRL':true:'1.0-0'"></span> a <span [textContent]="vars.filter.hotelprice.val[1] | currency:'BRL':true:'1.0-0'"></span> Max</em>
+								<nouislider [step]="1" [connect]="true" [min]="vars.filter.hotelprice.min" [max]="vars.filter.hotelprice.max" [(ngModel)]="vars.filter.hotelprice.val"></nouislider>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -177,7 +183,7 @@
 								</a>
 							</li>
 							<li class="item">
-								<span (click)="sortBy('price', (vars.sort.price.asc ? vars.sort.price.desc : vars.sort.price.asc))">
+								<span (click)="sortBy('price', (vars.sort.price.asc ? false : true))">
 									Preço
 									<a title="Maior no Topo" href="javascript:;" [attr.class]="vars.sort.price.desc ? 'active' : ''" (click)="sortBy('price', false)">
 										<i class="fa fa-sort-desc"></i>
