--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -266,7 +266,7 @@ body {
 							}
 						}
 						input {
-							padding-left: 3rem;
+							padding-left: 2rem;
 							&::-webkit-input-placeholder {
 								color: #aaa;
 							}
@@ -283,13 +283,13 @@ body {
 						.icon {
 							z-index: 1;
 							position: absolute;
-							font-size: 2.3rem;
+							font-size: 1.8rem;
 							display: inline-block;
 							width: 0.4em;
 							height: 0.4em;
 							border: 0.08em solid #aaa;
 							border-radius: 50%;
-							left: 0.5em;
+							left: 0.4em;
 							top: 0.7rem;
 							&:before {
 								content: '';
@@ -1232,7 +1232,16 @@ body {
 			}
 		}
 		.filtro {
-			h3 {}
+			text-align: left;
+			h3 {
+				font-size: 1rem;
+				color: #222;
+			}
+			h4 {
+				text-transform: uppercase;
+				font-size: 0.75rem;
+				color: #aaa;
+			}
 			.filtros {}
 			.hotelname {
 				label {
@@ -1256,6 +1265,13 @@ body {
 					}
 				}
 			}
+			.hotelprice {
+				display: block;
+				width: 80%;
+			}
+		}
+		.noUi-base .noUi-connect {
+			background-color: #243E6F;
 		}
 	}
 }
