--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -133,10 +133,10 @@
 		<style></style>
 		<div class="wrap">
 			<div class="filtro">
-				<div ngui-sticky sticky-after=".sub .txt">
+				<div class="filtros" ngui-sticky sticky-after=".sub .txt">
 					<div class="wrap">
 						<h3>Filtrar resultados</h3>
-						<div class="filtros">
+						<div class="filtro-ativo">
 							<h4>Filtros Ativos</h4>
 							<ul *ngFor="let filtro of vars.filtros">
 								<li>
