--- a/src/styles.scss
+++ b/src/styles.scss
@@ -231,7 +231,7 @@ body {
     color: #fff;
     content: attr(data-tooltip);
     text-align: center;
-    font-size: 14px;
+    font-size: 0.71rem;
     line-height: 1.2;
     white-space: pre-wrap;
 }
