--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -95,6 +95,8 @@ body {
 		}
 		.body {
 			form {
+				position: relative;
+				z-index: 2;
 				&>div {
 					&.search,
 					&.opt,
@@ -311,6 +313,11 @@ body {
 							width: 49%;
 							&>label {
 								&>input {
+									/* 									margin-left: .7rem;
+																	}
+																	& .checkin,
+																	& .checkout {
+									 */
 									position: fixed;
 									top: -999rem;
 									left: -999rem;
@@ -345,10 +352,10 @@ body {
 									width: 100%;
 									height: 100%;
 									overflow: visible;
+									z-index: -1;
 									&.topArrow {
 										margin-top: 22px;
 										& .daterangepicker {
-
 											&:before,
 											&:after {
 												content: '';
@@ -402,7 +409,12 @@ body {
 											max-width: 49%;
 											.fa-calendar.glyphicon,
 											.input-mini {
-												display: none;
+												position: fixed;
+												top: -999rem;
+												left: -999rem;
+												width: 0;
+												height: 0;
+												z-index: -1;
 											}
 											td {
 												line-height: 1.5;
@@ -440,7 +452,7 @@ body {
 								display: block;
 								width: 100%;
 								font-size: 1rem;
-								padding: 0.5rem;
+								padding: 0.44rem;
 								line-height: 1.2;
 								color: #aaa;
 								text-align: left;
@@ -1243,7 +1255,7 @@ body {
 		.filtro {
 			text-align: left;
 			h3 {
-				    font-weight: 600;
+				font-weight: 600;
 				color: #777;
 				padding-bottom: 0.8rem;
 			}
