--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,7 +31,7 @@
 						<div class="opt">
 							<div class="dateRange">
 								<label class="wrap" (keydown.Tab)="nextInput($event)">
-									<input type="text" name="daterangeInput" daterangepicker [options]="options" (hideCalendar.daterangepicker)="consoleDate($event)" (selected)="selectedDate($event)" />
+									<input type="text" name="daterangeInput" daterangepicker [options]="options" (blur)="blurDate($event)" (selected)="selectedDate($event)" />
 									<div [attr.class]="'checkin' + ((mdl.entrada.val || '').length ? ' touched' : '')">
 										<span class="txt" [textContent]="mdl.entrada.txt || '&nbsp;'"></span>
 										<span class="label"><span>Check-in</span></span>
@@ -234,7 +234,7 @@
 								</span>
 							</li>
 							<li class="maps">
-								<a href="javascript:;">
+								<a href="/map.html" target="_blank">
 									<i class="fa fa-map-marker fgc c2" aria-hidden="true"></i>
 									<span class="text">
 										Ver no mapa
