--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,7 +40,7 @@
 										<span class="txt" [textContent]="mdl.saida.txt || '&nbsp;'"></span>
 										<span class="label"><span>Check-out</span></span>
 									</div>
-									<div id="pickMe" [attr.class]="'topArrow' + (show.calendarRight ? ' rightAlign': '')"></div>
+									<div id="pickMe" [attr.class]="'topArrow' + (!mdl.saida.val.length || show.calendarRight ? ' rightAlign': '')"></div>
 								</label>
 							</div>
 							<div #rooms class="rooms">
@@ -234,7 +234,7 @@
 								</span>
 							</li>
 							<li class="maps">
-								<a href="/map.html" target="_blank">
+								<a href="map.html" target="_blank">
 									<i class="fa fa-map-marker fgc c2" aria-hidden="true"></i>
 									<span class="text">
 										Ver no mapa
