--- a/src/app/detalhe/detalhe.component.html
+++ b/src/app/detalhe/detalhe.component.html
@@ -1,7 +1,7 @@
 <p>
-	{{ json2str(params) }}
-	<span [textContent]="params.id"></span>
-	<span [textContent]="params.in"></span>
-	<span [textContent]="params.out"></span>
-	<span [textContent]="params.rooms"></span>
+	2
+	<span [textContent]="params.id||'id'"></span>
+	<span [textContent]="params.in||'in'"></span>
+	<span [textContent]="params.out||'out'"></span>
+	<span [textContent]="params.apt||'apt'"></span>
 </p>
