--- a/src/app/busca/busca.component.html
+++ b/src/app/busca/busca.component.html
@@ -1,3 +1,8 @@
 <p>
-  busca works!
+	<span [textContent]="params.chld||'0'"></span>
+	<span [textContent]="params.id||'1'"></span>
+	<span [textContent]="params.in||'2'"></span>
+	<span [textContent]="params.out||'3'"></span>
+	<span [textContent]="params.apt||'4'"></span>
+	<span [textContent]="params.tst||'5'"></span>
 </p>
