--- a/src/app/detalhe/detalhe.component.html
+++ b/src/app/detalhe/detalhe.component.html
@@ -1,7 +1,8 @@
 <p>
-	2
-	<span [textContent]="params.id||'id'"></span>
-	<span [textContent]="params.in||'in'"></span>
-	<span [textContent]="params.out||'out'"></span>
-	<span [textContent]="params.apt||'apt'"></span>
+	<span [textContent]="params.chld||'0'"></span>
+	<span [textContent]="params.id||'1'"></span>
+	<span [textContent]="params.in||'2'"></span>
+	<span [textContent]="params.out||'3'"></span>
+	<span [textContent]="params.apt||'4'"></span>
+	<span [textContent]="params.tst||'5'"></span>
 </p>
