--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -1,8 +1,120 @@
-<p>
-	1
-	<span [textContent]="params.id||'id'"></span>
-	<span [textContent]="params.in||'in'"></span>
-	<span [textContent]="params.out||'out'"></span>
-	<span [textContent]="params.apt||'apt'"></span>
-	<router-outlet></router-outlet>
-</p>
+<div class="app-root">
+	<div class="app-home">
+		<div [attr.class]="(vars.hotelList.state > 0 ? 'search' : '')">
+			<div>
+				<div class="wrap main">
+					<div class="head wrap">
+						<h1><img [attr.src]="vars.logo.url" [attr.alt]="vars.logo.alt"></h1>
+						<p class="fgc c1" [innerHTML]="vars.slogan"></p>
+						<div class="menu" *ngIf="vars.hotelList.state > 1">
+							<ul>
+								<li>
+									<a href="javascript:;">
+									<span>BRL</span>
+								</a>
+								</li>
+								<li>
+									<a href="javascript:;">
+									<span>Login</span>
+								</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="body">
+						<form class="wrap" (ngSubmit)="onSubmit(false)" novalidate>
+							<div class="search">
+								<label>
+									<ng2-completer (input)="onCompleterInput($event)" (focus)="onCompleterFocus($event)" [selectOnFocus]="true" (blur)="onCompleterBlur($event)" name="busca" (selected)="onCompleterSelected($event)" [(initialValue)]="mdl.busca.init" [autoMatch]="true" [inputClass]="mdl.busca.cls" [autofocus]="true" [textSearching]="null" [textNoResults]="null" [inputName]="'busca'" [placeholder]="mdl.busca.placeholder" [(ngModel)]="mdl.busca.val" [datasource]="customData" [clearUnselected]="false" [minSearchLength]="3" [fieldTabindex]="1" [selectOnClick]="true" [openOnClick]="true" [matchClass]="'completer-highlighted-word'"></ng2-completer>
+									<span class="icon"></span>
+								</label>
+							</div>
+							<div class="opt">
+								<div class="dateRange">
+									<label class="wrap" (keydown.Tab)="nextInput($event)">
+										<input type="text" name="daterangeInput" daterangepicker [options]="options" (blur)="blurDate($event)" (selected)="selectedDate($event)" />
+										<div [attr.class]="'checkin' + ((mdl.entrada.val || '').length ? ' touched' : '')">
+											<span class="txt" [textContent]="mdl.entrada.txt || '&nbsp;'"></span>
+											<span class="label"><span>Check-in</span></span>
+										</div>
+										<div [attr.class]="'checkout' + ((mdl.saida.val || '').length ? ' touched' : '')">
+											<span class="txt" [textContent]="mdl.saida.txt || '&nbsp;'"></span>
+											<span class="label"><span>Check-out</span></span>
+										</div>
+										<div id="pickMe" [attr.class]="'topArrow' + (!mdl.saida.val.length || show.calendarRight ? ' rightAlign': '')"></div>
+									</label>
+								</div>
+								<div #rooms class="rooms">
+									<div class="quartos" (click)="onClick($event.target)">
+										<span class="label">
+								<span class="icon-room">
+									<img [attr.src]="vars.icons.base + vars.icons.room" alt="Q">
+								</span>
+										<span class="val" [textContent]="mdl.room.total"></span>
+										<span class="pessoas">
+									<span class="icon-people">
+										<img [attr.src]="vars.icons.base + vars.icons.people" alt="P">
+									</span>
+										<span class="val" [textContent]="mdl.room.people.total"></span>
+										</span>
+										</span>
+									</div>
+									<div [attr.class]="'room' + (open.rooms ? ' show topArrow rightAlign' : '')">
+										<div class="header">
+											<a (click)="show.room = n" [attr.class]="'btn' + (show.room === n ? ' bgc c1 active':'')" *ngFor="let p of mdl.room.people.list; let n = index;">
+											<span>
+												Quarto {{n + 1}}
+											</span>
+										</a>
+											<span [hidden]="mdl.room.total <= 1" class="icon-remove remove" (click)="rmRoom(show.room)">
+											<img [attr.src]="vars.icons.base + vars.icons.remove" alt="&times;">
+										</span>
+										</div>
+										<div class="content" #quartosWrap>
+											<div [attr.class]="'room' + (n + 1) + ' ' + (show.room > n ? 'alignL' : (show.room === n ? 'alignC' : 'alignR'))" *ngFor="let p of mdl.room.people.list; let n = index;">
+												<div class="campos wrap">
+													<div class="people">
+														<label>
+															<span>Adultos (18 anos)</span>
+															<input (focus)="show.room = n; quartosWrap.scrollLeft = 0;" type="number" placeholder="" min="1" max="{{mdl.room.people.limit}}" id="adults[{{p.name}}]" name="adults[{{p.name}}]" [ngModel]="p.more18" (ngModelChange)="changeAdult(n, $event, 'adults[' + p.name + ']')">
+														</label>
+														<label>
+															<span>Crianças (0-17 anos)</span>
+															<input (focus)="show.room = n" min="0" max="{{mdl.room.people.limit}}" step="1" type="number" id="children[{{p.name}}]" name="children[{{p.name}}]" [ngModel]="p.less18.total" (ngModelChange)="changeChild(n, $event, 'children[' + p.name + ']')">
+														</label>
+													</div>
+													<div class="children wrap">
+														<label *ngFor="let pp of p.less18.list; let nn = index">
+															<span>Criança {{ nn + 1 }}</span>
+															<input (focus)="show.room = n" type="number" max="17" min="0" placeholder="" name="childage[{{p.name}}][{{nn}}]" [(ngModel)]="pp.age">
+														</label>
+													</div>
+												</div>
+											</div>
+										</div>
+										<a [hidden]="mdl.room.total >= mdl.room.limit" [attr.class]="'add bgc c1' + (mdl.room.disabled ? ' disabled' : '')" href="javascript:;" (click)="addRoom(mdl.room.total)">Adicionar Quarto</a>
+									</div>
+								</div>
+								<div class="submit">
+									<input class="bgc c1" type="submit" value="Busca">
+								</div>
+							</div>
+							<div class="eanKeys" *ngIf="open.keys">
+								<input placeholder="eanCID" name="cid" [(ngModel)]="mdl.keys.cid">
+								<input placeholder="eanAPIKey" name="api" [(ngModel)]="mdl.keys.api">
+								<input placeholder="eanSharedSecret" name="secret" [(ngModel)]="mdl.keys.secret">
+							</div>
+						</form>
+						<div class="sub" *ngIf="vars.hotelList.HotelListResponse && vars.hotelList.state > 1">
+							<span class="txt">
+							{{mdl.busca.lastVal}}: {{vars.hotelList.properties}} propriedade{{vars.hotelList.properties > 1 ? 's' : ''}}
+						</span>
+						</div>
+					</div>
+				</div>
+				<div class="result" [hidden]="vars.hotelList.state < 1">
+					<router-outlet></router-outlet>
+				</div>
+			</div>
+		</div>
+	</div>
