--- a/src/app/busca/busca.component.html
+++ b/src/app/busca/busca.component.html
@@ -1,3 +1,6 @@
+<div class="app-busca" [hidden]="vars.loadHotel === undefined">
+	<div *ngIf="vars.hotelList.HotelListResponse;then content else other_content"></div>
+</div>
 <p>
 	<span [textContent]="params.chld||'0'"></span>
 	<span [textContent]="params.id||'1'"></span>
@@ -6,3 +9,252 @@
 	<span [textContent]="params.apt||'4'"></span>
 	<span [textContent]="params.tst||'5'"></span>
 </p>
+<ng-template #content>
+	<style>
+	@font-face {
+		font-family: 'icomoon';
+		src: url('assets/font/icons.eot');
+		src: url('assets/font/icons.eot?#iefix') format('embedded-opentype'),
+		url('assets/font/icons.woff') format('woff'),
+		url('assets/font/icons.ttf') format('truetype'),
+		url('assets/font/icons.svg#icons') format('svg');
+		font-weight: normal;
+		font-style: normal;
+	}
+
+	</style>
+	<style></style>
+	<div class="wrap">
+		<div class="filtro">
+			<div class="filtros" data-stuck>
+				<div class="wrap">
+					<h3>Filtrar resultados</h3>
+					<div class="filtro-ativo" *ngIf="vars.filter.bit.val > 0">
+						<h4>Filtros Ativos</h4>
+						<ul>
+							<ng-template let-filtro ngFor [ngForOf]="vars.filter.bit.masks" let-i="index">
+								<ng-template let-item ngFor [ngForOf]="filtro.arr" let-j="index">
+									<li *ngIf="item.val">
+										<a href="javascript:;" (click)="filterRm(i, j)">
+											<span [textContent]="item.str">
+											</span>
+											<span class="rm-filtro">X</span>
+										</a>
+									</li>
+								</ng-template>
+							</ng-template>
+						</ul>
+						<a class="filtro-limpa fgc c1" href="javascript:;" (click)="filterClean()">
+							Limpar todos os filtros
+						</a>
+					</div>
+					<div class="hotelname">
+						<div class="wrap">
+							<h4>Nome do hotel</h4>
+							<label (keyup.Enter)="filterBy('hotelname', vars.filter.hotelname.val)">
+								<input type="text" placeholder="Nome do hotel" name="hotelname" [(ngModel)]="vars.filter.hotelname.val" (ngModelChange)="hotelnameChange()">
+							</label>
+							<a href="javascript:;" (click)="filterBy('hotelname', vars.filter.hotelname.val)" class="btn bgc c1">
+								<span>OK</span>
+							</a>
+						</div>
+					</div>
+					<div class="hotelprice">
+						<div class="wrap">
+							<h4>Preço por noite</h4>
+							<em>Min <span [textContent]="vars.filter.hotelprice.val[0] | currency:'BRL':true:'1.0-0'"></span> a <span [textContent]="vars.filter.hotelprice.val[1] | currency:'BRL':true:'1.0-0'"></span> Max</em>
+							<nouislider [step]="1" [connect]="true" [min]="vars.filter.hotelprice.min" [max]="vars.filter.hotelprice.max" [(ngModel)]="vars.filter.hotelprice.val"></nouislider>
+						</div>
+					</div>
+					<div class="hotelfilters">
+						<div class="wrap" *ngFor="let filtro of vars.filter.bit.masks; let i = index;">
+							<div class="title wrap">
+								<h4 [textContent]="filtro.str"></h4>
+								<a class="sanfona fgc c1" [attr.title]="filterOpened(i) ? 'Fechar' : 'Abrir'" href="javascript:;" (click)="filterOpen(i);">
+									<i [attr.class]="'fa fa-angle-' + (filterOpened(i) ? 'up' : 'down')"></i>
+								</a>
+							</div>
+							<ul [hidden]="!show.masks[i]">
+								<li *ngFor="let item of filtro.arr; let j = index;">
+									<label>
+										<input type="checkbox" (ngModelChange)="filterAdd(i, j)" [(ngModel)]="item.val">
+										<span [textContent]="item.str"></span>
+									</label>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="cards">
+			<div class="stickie" data-stuck>
+				<div class="wrap">
+					<ul class="sort">
+						<li class="item">
+							<a href="javascript:;">
+								<span class="hotdeals icon">
+									<img [attr.src]="vars.icons.base + vars.icons.sugestoes" alt="Sugestões">
+								</span>
+							</a>
+						</li>
+						<li class="item">
+							<a href="javascript:;">
+								<span>Mais Populares</span>
+							</a>
+						</li>
+						<li class="item">
+							<span (click)="sortBy('price', (vars.sort.price.asc ? false : true))">
+								Preço
+								<a title="Maior no Topo" href="javascript:;" [attr.class]="vars.sort.price.desc ? 'active' : ''" (click)="sortBy('price', false)">
+									<i class="fa fa-sort-desc"></i>
+								</a>
+								<a title="Menor no Topo" href="javascript:;" [attr.class]="vars.sort.price.asc ? 'active' : ''" (click)="sortBy('price', true)">
+									<i class="fa fa-sort-asc"></i>
+								</a>
+							</span>
+						</li>
+						<li class="item">
+							<span>
+								Avaliação
+								<a href="javascript:;" [attr.class]="vars.sort.rating.desc ? 'active' : ''" (click)="sortBy('preco', false)">
+									<i class="fa fa-sort-desc"></i>
+								</a>
+								<a href="javascript:;" [attr.class]="vars.sort.rating.asc ? 'active' : ''" (click)="sortBy('preco', true)">
+									<i class="fa fa-sort-asc"></i>
+								</a>
+							</span>
+						</li>
+						<li class="maps">
+							<a href="map.html" target="_blank">
+								<i class="fa fa-map-marker fgc c2" aria-hidden="true"></i>
+								<span class="text">
+									Ver no mapa
+								</span>
+								<img [attr.src]="vars.icons.base + vars.icons.map" alt="Ver no mapa">
+							</a>
+						</li>
+						<li class="compare">
+							<a href="javascript:;" [attr.class]="'btn bgc c1' + (show.compare.length ? '' : ' disabled')" (click)="compareBtn($event);">
+								<span class="text">Comparar</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<ul *ngIf="vars.hotelList.HotelListResponse">
+				<li [attr.style]="cardShadow(item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.color)" [attr.class]="'wrap ' + 'cardN' + i + ' '" *ngFor="let item of vars.hotelList.HotelListResponse; let i = index;">
+					<div class="img" (click)="show.cardImg[i] = show.cardImg[i] ? 0 : 1" [attr.data-test]="(item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.color ? ('box-shadow: 0px 0px 16px 4px ' + item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.color + ';') : '')">
+						<span *ngIf="show.valueAdds[i] && show.valueAdds[i][0]" class="cafe-incluso">
+							<!-- <img [attr.src]="vars.icons.base + 'adds-' + valueAdds.icons[0] + '.png'" alt=""> -->
+							<i [attr.class]="'fa ' + valueAdds.icons[0]"></i>
+							<span class="fgc c1">
+								Café da manhã
+								<span class="fgc c2">incluído</span>
+						</span>
+						</span>
+						<div [attr.class]="'abs ' + (show.cardImg[i] > n ? 'alignL' : (show.cardImg[i] === n ? 'alignC' : 'alignR'))" *ngFor="let img of [item.thumbNailUrl, item.thumbNailUrl]; let n = index">
+							<img [attr.class]="n ? 'flipped' : ''" [attr.src]="img ? 'https://i.travelapi.com' + img.replace('_t.', '_d.') : ''" alt="">
+						</div>
+					</div>
+					<div class="info wrap">
+						<div class="top wrap">
+							<div class="left">
+								<span class="nome" [textContent]="item.name"></span>
+								<div class="ndwrap wrap">
+									<div class="rateStar">
+										<div class="stars">
+											<span [attr.class]="(item.hotelRating % 1 !== 0 && j + 1 > item.hotelRating ? ' half' : '')" *ngFor="let star of [] | range:item.hotelRating; let j = index;">
+												☆
+											</span>
+										</div>
+									</div>
+									<div class="location" (mouseenter)="$event.target.className = 'location' + ($event.target.children[0].offsetWidth < $event.target.children[0].scrollWidth ? ' hover' : '');" (mouseleave)="$event.target.className = 'location';" [attr.data-tooltip-dyn]="item.locationDescription">
+										<span class="label" [textContent]="item.locationDescription"></span>
+									</div>
+								</div>
+								<div class="amenidades">
+									<ul *ngIf="show.valueAdds[i].slice(1).join('').length">
+										<li [hidden]="!desc || !k" *ngFor="let desc of show.valueAdds[i]; let k = index;">
+											<span [attr.data-tooltip]="desc">
+												<i *ngIf="valueAdds.icons[k].indexOf('fa-') === 0" [attr.class]="'fa ' + valueAdds.icons[k]"></i>
+												<span style="font-family: icomoon;" *ngIf="valueAdds.icons[k].indexOf('x') === 0" [innerHTML]="decodeHTML('&' + '#' + valueAdds.icons[k] + ';')"></span>
+											<span *ngIf="valueAdds.icons[k].indexOf('parking') === 0" class="fa-stack" style="font-size: 0.6rem;">
+													<i class="fa fa-square fa-stack-2x"></i>
+													<strong class="fa-stack-1x fa-inverse icon-text">P</strong>
+												</span>
+											<span class="svg" *ngIf="valueAdds.icons[k].indexOf('svg-') === 0">
+													<img [attr.src]="vars.icons.base + valueAdds.icons[k] + '.svg'" alt="">
+												</span>
+											</span>
+										</li>
+									</ul>
+									<span *ngIf="show.remainAdds[i].length" [textContent]="(show.remainAdds[i].length + show.valueAdds[i].slice(1).sort().indexOf(undefined) + 1) + ' comodidade' + ((show.valueAdds[i].slice(1).sort().indexOf(undefined) + 1 + show.remainAdds[i].length) > 1 ? 's' : '')" [attr.data-tooltip]="show.remainAdds[i].join(' &#013; ')"></span>
+								</div>
+							</div>
+							<div class="right">
+								<div class="rateTrip fgc c1" [hidden]="!item.tripAdvisorRating">
+									<span class="label" [textContent]="item.tripAdvisorLabel"></span>
+									<span class="rate" [textContent]="item.tripAdvisorRating.toFixed(1)"></span>
+								</div>
+								<div class="lastRooms fgc c2" [hidden]="item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.currentAllotment <= 0 || item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.currentAllotment >= 2147483646">
+									<span class="icon">
+										<img [attr.src]="vars.icons.base + vars.icons.hot" alt="">
+									</span>
+									<span class="text">
+										{{ item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.currentAllotment <= 1 ? 'último quarto' : 'últimos ' + item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.currentAllotment + ' quartos'}}
+									</span>
+								</div>
+							</div>
+						</div>
+						<div class="bot wrap">
+							<div class="left">
+								<div class="room-desc" (mouseenter)="$event.target.className = 'room-desc' + ($event.target.children[0].offsetWidth < $event.target.children[0].scrollWidth ? ' hover' : '');" (mouseleave)="$event.target.className = 'room-desc';" [attr.data-tooltip-dyn]="item.RoomRateDetailsList.RoomRateDetails.roomDescription">
+									<span class="label" [textContent]="item.RoomRateDetailsList.RoomRateDetails.roomDescription"></span>
+								</div>
+								<div class="compBtn">
+									<a [attr.class]="(show.compare.indexOf(item.hotelId) >= 0 ? 'active' : '')" href="javascript:;" (click)="compareAdd($event, item.hotelId)">
+										<span class="fgc c1">
+											Comparar
+											<!-- <img [attr.src]="vars.icons.base + vars.icons.compDark" alt=""> -->
+										</span>
+									</a>
+								</div>
+							</div>
+							<div class="right">
+								<div class="preco fgc c1">
+									<div class="aincluir">
+										A incluir taxas e impostos
+									</div>
+									<div class="cheio">
+										<span class="media">Média / Noite</span>
+										<span class="val wideTip" [attr.data-tooltip]="['Comissão%: ' +item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.storeFinalCommPercent,'ComissãoR$: ' +item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.storeFinalComm].join(' &#013; ')" [textContent]="'R$ ' + item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.averageFinalPrice"></span>
+									</div>
+								</div>
+								<div class="details wrap">
+									<div class="selecionar">
+										<a href="javascript:;" class="btn bgc c1">
+											<span>Selecionar</span>
+										</a>
+									</div>
+									<div class="tarifa">
+										<span class="non-refundable" *ngIf="item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.nonRefundable">Tarifa não reembolsável</span>
+										<span class="refundable" *ngIf="!item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.nonRefundable">Cancelamento GRÁTIS</span>
+										<span class="iof">sem IOF</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<span [hidden]="!infinityScrolling">Loading</span>
+</ng-template>
+<ng-template #other_content>
+	<span *ngIf="vars.hotelList.HotelListResponseStr" [textContent]="vars.hotelList.HotelListResponseStr"></span>
+	<span class="loading icon" *ngIf="vars.hotelList.HotelListResponseStr === null">
+		<img [attr.src]="vars.loading" alt="Carregando...">
+	</span>
+</ng-template>
