--- a/src/app/html/title/title.component.html
+++ b/src/app/html/title/title.component.html
@@ -1,13 +1,12 @@
-<div class="wrap">
-	<h1><img [attr.src]="vars.logo.url" [attr.alt]="vars.logo.alt"></h1>
-	<p class="fgc c1" [innerHTML]="vars.slogan"></p>
-	<div class="menu" *ngIf="vars.hotelList.state > 1">
-		<ul>
-			<li>
-				<a href="javascript:;"><span>BRL</span></a>
-			</li>
-			<li>
-				<a href="javascript:;"><span>Login</span></a>
+<div class="html-title">
+	<h1><img [attr.src]="logo.url" [attr.alt]="logo.alt"></h1>
+	<p class="fgc c1" [innerHTML]="slogan"></p>
+	<div class="menu" *ngIf="vars.loadSearch">
+		<ul *ngIf="menu.length">
+			<li *ngFor="let item of menu">
+				<a [routerLink]="item.link || []" href="item.href || 'javascript:;'">
+					<span [textContent]="item.txt"></span>
+				</a>
 			</li>
 		</ul>
 	</div>
